# protectogram

./: .cursorrules  .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  .secrets.baseline  BEGINNERS_GUIDE.md  CLAUDE.md  Dockerfile  Makefile  README.md  STAGING_DEPLOYMENT.md  TELEGRAM_TEST_GUIDE.md  alembic.ini  bandit.yaml  charter.md  check_db.py  check_incidents.py  check_tables.py  cleanup_all_test_data.py  cleanup_panic_alerts.py  constraints.txt  create_guardian_invitation.py  docker-compose.yml  env.example  fly.staging.toml  fly.toml  mypy.ini  project_setup.sh  pyproject.toml  pytest.ini  register_user_via_telegram.py  requirements.txt  ruff.toml  security-report.json  test_api_invitation.py  test_guardian_api.py  test_guardian_invitation.py  test_panic_local.py  test_panic_twilio.py  (+3 more)
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 20250901_1942_ae42b859e4e0_create_application_tables_users_.py  20250901_2154_75c66b2a8600_add_missing_user_fields_telegram_.py  20250901_2226_f55a995e0b02_remove_timezone_and_is_active_columns_.py  20250902_0004_50f9239565ef_remove_email_field_from_users_table.py  20250903_1919_998f6f94f69f_add_panic_alert_models.py  20250903_2235_d7c995e2a3b4_increase_status_column_length_for_.py  20250904_1837_1b4eeae8dbae_add_guardian_registration_and_consent_.py  20250907_2002_9e08f0d3498b_add_panic_session_models_for_new_.py
app/: __init__.py  auth.py  celery_app.py  database.py  dependencies.py  factory.py  main.py  middleware.py
app/api/: __init__.py  admin.py  health.py  metrics.py  panic.py  telegram.py  telnyx.py
app/api/admin/: __init__.py  database.py  migrations.py  models.py
app/api/routers/: telegram.py
app/api/v1/: __init__.py  auth.py  guardians.py  user_guardians.py  users.py
app/api/webhooks/: telegram.py  twilio.py
app/config/: __init__.py  settings.py
app/core/: __init__.py  access_control.py  communications.py  config.py  database.py  dependencies.py  flags.py  idempotency.py  logging.py  metrics.py  services.py  settings.py  ui_strings.py
app/domain/: __init__.py  panic.py
app/integrations/: __init__.py  telegram_client.py
app/integrations/telegram/: __init__.py  client.py  handlers.py  inbound.py  outbox.py  parsing.py  security.py  ui.py
app/integrations/telnyx/: __init__.py  call_control.py  cascade.py  client.py  driver.py  handlers.py  webhook.py
app/models/: __init__.py  base.py  guardian.py  panic.py  trip.py  user.py  user_guardian.py
app/observability/: metrics.py
app/providers/: twilio_provider.py
app/scheduler/: __init__.py  jobs.py  registry.py  run.py  setup.py
app/schemas/: guardian.py  panic.py  user.py  user_guardian.py
app/services/: guardian.py  panic_service.py  panic_session_service.py  telegram_onboarding.py  user.py  user_guardian.py
app/storage/: __init__.py  base.py  interfaces.py  models.py  session.py
app/tasks/: panic_notifications.py
docs/: deployment-production.md  deployment-staging.md  deployment.md  development-setup.md  migrations.md  phone-validation.md  telnyx-ovp-setup.md
migrations/: alembic.ini  env.py
migrations/versions/: 003_add_panic_domain.py  004_fix_incident_status_enum.py  eda39af885f1_convert_datetime_columns_to_timezone_.py  f705d587bd52_initial_migration.py
requirements/: base.txt  dev.txt  production.txt  staging.txt
scripts/: deploy-staging.sh  health-check.sh  setup.sh  verify_setup.py
tests/: README.md  __init__.py  conftest.py  test_basic.py  test_integration.py  test_panic_session_service.py  test_panic_workflow_integration.py
tests/contract/: conftest.py  test_api_contracts.py  test_contract_telegram.py  test_contract_telnyx.py  test_telegram_contract.py
tests/contract/canned_updates/: callback_basic.json  message_ping.json  message_start.json
tests/fakes/: repositories.py
tests/integration/: conftest.py  test_inbox_outbox_idempotency.py  test_metrics_ready.py  test_migrations.py  test_scheduler_persistence.py  test_user_guardian_async.py
tests/unit/: conftest.py  test_health.py  test_logging.py  test_metrics.py  test_middleware.py  test_settings.py  test_telegram_parsing.py  test_telegram_security.py
