[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]
exclude = ["tests*", "migrations*"]

[project]
name = "protectogram"
version = "0.1.0"
description = "Protectogram - Incident Management System"
authors = [
    {name = "Anton Malkov", email = "anton@example.com"}
]
readme = "README.md"
requires-python = ">=3.12,<3.13"
license = {text = "MIT"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "fastapi==0.115.0",
    "uvicorn[standard]==0.30.6",
    "sqlalchemy[asyncio]==2.0.32",
    "asyncpg==0.29.0",
    "alembic==1.13.2",
    "apscheduler==3.10.4",
    "httpx==0.27.2",
    "aiogram==3.7.0",
    "telnyx==2.1.6",
    "pydantic>=2.4.1,<2.8",
    "pydantic-settings==2.4.0",
    "python-dotenv==1.0.1",
    "prometheus-client==0.20.0",
    "structlog==24.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.2",
    "pytest-asyncio==0.23.8",
    "respx==0.21.1",
    "freezegun==1.5.1",
    "ruff==0.6.1",
    "mypy==1.11.1",
    "bandit==1.7.9",
    "types-requests==2.32.0.20240712",
    "typing-extensions==4.12.2",
]

[tool.ruff]
line-length = 100
target-version = "py312"
select = ["E", "F", "I", "B", "UP", "SIM"]
ignore = []

[tool.ruff.format]
line-length = 100

[tool.mypy]
python_version = "3.12"
warn_unused_ignores = true
no_implicit_optional = true
disallow_untyped_defs = true
exclude = [
    "migrations/.*",
]

[tool.pytest.ini_options]
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "contract: Contract tests",
]
asyncio_mode = "auto"
testpaths = ["tests"]
